# research-copilot

./: .gitignore  README.md  agent_pipeline.py  app.py  ingest.py  pyproject.toml  query.py  requirements.txt  test.py
agent_chain/: agent_pipeline.py  tools.py
ingest/: fetch.py  ingest.py  sources.py
vector_store/2f183a17-b557-4c79-b083-f1982e13fd01/: index_metadata.pickle
