[project]
name = "research-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.4.22",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
]
